--- a/src/app/pages/main/content/videos/videos.component.html
+++ b/src/app/pages/main/content/videos/videos.component.html
@@ -6,11 +6,11 @@
   <section class="content">
     <ng-container *ngIf="getvideos.length > 0; else blankVideos">
       <div *ngFor="let item of getvideos; let i = index" class="item-box">
-        <img [src]="item.videoThumbnails[0]['url']" alt="img" />
+        <img [src]="item.thumbnail[2]['url']" alt="img" />
         <div class="text">
           <div class="title">{{ item.title }}</div>
           <div class="desc">
-            <div *ngIf="i < 1" class="author">By {{ item.author }}</div>
+            <div *ngIf="i < 1" class="author">By {{ item.channelTitle }}</div>
             <div *ngIf="i > 0" class="author">{{ item.title }}</div>
             <div class="views">{{ item.viewCount }} views</div>
           </div>
