--- a/src/app/pages/main/content/activities/activities.component.scss
+++ b/src/app/pages/main/content/activities/activities.component.scss
@@ -54,10 +54,9 @@
         transform: rotate(45deg);
         font-size: 20px;
       }
-      .img-box {
+      img {
         background-color: #fff;
-        width: 60px;
-        height: 60px;
+        height: 42px;
         border-radius: 8px;
         overflow: hidden;
         display: flex;
